# server

./: .dockerignore  .gitignore  .lintstagedrc.mjs  .prettierignore  .prettierrc.json  CLAUDE.md  Cargo.toml  Dockerfile  Procfile  QCExtensions.Server.sln  README.md  TODO  app.json  bindings  database-update.sh  deploy.sh  docker-compose.yml  eslint.config.mjs  index.html  package-lock.json  package.json  run-backend.ps1  run-tests.ps1  run_eslint.sh  run_eslint_suppressed.sh  run_react_tests.sh  run_storybook_tests.sh  sqlx-data.json  sqlx-mig.sh  tsconfig.json  update_bindings.sh  vite.config.ts  vitest.config.ts
.cargo/: config.toml
.github/workflows/: promote.yml  webhook_target.yml  workflow.yml
.husky/: pre-commit
database/: Cargo.toml  sqlx-data.json
database/.sqlx/: query-0006613e10a0d3627aabbef9321ceb4130f19571d1907fbf930000b2df7e14de.json  query-01917b802c49943c088f93b9c1bbcf63821b990510b035847f0ae1e9054ae5c6.json  query-0253705312940406649aee3aae2b404926d60422442456418ddaa5a95376ecfc.json  query-02a1557e74eb81153999f7250dc99e12268224ea9688b74b3d6d421182ee282b.json  query-055b39119e3702a7341097e5c785f18e053b2d0e936614c806cf53df932f8eca.json  query-05764f174d03456037b1be29b77f99e5d6acc583b63e6d87950172ee4191feb8.json  query-0661da3ca9350633c12e2b696c10655950390624d3d611daaa979ac89fdc54fb.json  query-07867debc2a1877a81fc534cfc5ef373914df0517d80217df540a6100730f5ec.json  query-07b0d08eecf5cff0a3c54978b1385384360a0b9d693ff06c0032fcb90151c2eb.json  query-0920be6a560231cf42cb184189a3aef674ebcab1abe97c7ca7e8a3e79b525d66.json  query-09cb8100681fb9f387fcb6894a7f275f592ba328d79c6a533df478d755188d19.json  query-0b8cda73bf288c260b501b08bbd47fa1504333ec3cb8488fec1520dfb2cd916c.json  query-0bcedfb03ba3b5884772d68135a07413bc050ec4314ed0cdf279bc07664d534f.json  query-106dc28e2e1871090af8e88d92e4ad282f23ab5ed899837a8b469ef39016daf1.json  query-109f7f9a62b48fc44ba953dc029c5e46ba4fc2a99027647d233e36e98e120d0a.json  query-11cc24fb8fba39cc503f18ca28714ea94a1206e8ed75e719597d64180639bd8e.json  query-12b51b4f6261b790b4bf28cfe5f80dbe9146f59ca1d0b94baca257e91f5bb51f.json  query-13193bfe44193d03ff549809b54fe3d9a4fa72ed4327324249d5fbdb41aa6ea5.json  query-16504385d9f4f08f3f13d17af94389b1d52dd94ff86f61fdd39d0f2ed6f5314b.json  query-171f43ee696d68b6e89cbb9aabb87e296e0d3679dc1e64bedec90b05e8cd3ed7.json  query-18193b7d1f3d64a2032525283f2a94d09b3d4c0af366153d20f2a21b98cca029.json  query-189740c270dbfa99912171a3184d9a91570d8c6ebd69930cace817d577377cff.json  query-1b5cd972500fdfed5f41fa9d48c232d45fc1043089147fb87513aef1006a3732.json  query-20238b44dc39a5ec13d36d7b9bdcde315ef1dbe2442d2eb9b5129866a43ac2ac.json  query-2050ff329699aceeaa27129553b1ce24ad466632114b9cd50404ceae08452975.json  query-2333e1ecb69385737cbfe49b7bfd6ca795cbc364e210e211fbba26f3f8391685.json  query-237d986df9c28980f6afd69d6e00264a3efbecec573fbc3a61c9baeb9e3f1474.json  query-2656cb32fc3527fffe31f931a0a8d2df1f2591b7261a6e5c71272adb94a014b5.json  query-26ae083274f8920932b66bdf56bd505e5b1e5c295394882a755907a551c8875b.json  query-28ee385a3268a93b89a2ec52ed27623863bb9a76bd4b967448a690b1d2c96626.json  query-2c9ed7de00eb3e475c0727af50998db91b5b109678f688b2cd8264e4bbf7ac38.json  query-2d3dd032d76da766a9fba568e5de08938e769e22624e2c8321c799cea3a80b11.json  query-2ed9909d8fcc0ea9392db5ed9cdf22621592a32b5591d3a41e6b82d257442a0d.json  query-305fbeeb777d63aaeb883fa90e4eaf05b3c1ac6031fe50450e1785287737fb51.json  query-3149147d3149fb9609d4b0456da69da6a1bdcf36630f97aa248b6b5ecd9b453b.json  query-3425e70eb2531cdcbab415986904ee4f1e8df0d9239d543006908db508a1cf82.json  query-345fdfd60fe5d14de39f19080510a9b4cc5c963ba1c3757d4d055a12a4b03d7b.json  query-36be11ff533726ea71395b3eecf96a1de6fb03e4eca91bec2efb326fa1474ca6.json  query-3b2347757ebd0bf3aa958ee7034c57d9f569f88d22ebb582e096e82fe05b2e38.json  query-3c0252569f2e72979b51baa651997ab7761ed98a6e303a3d4a8f2688b3eda9f8.json  (+126 more)
database/migrations/: 20210927103048_fix_ItemImages.sql  20210928095901_fix_log_entry_UserToken.sql  20211107064905_rename_tables.sql  20211107065312_rename_columns.sql  20230825184214_primary_item_image.sql  20230827085125_fix_new_item_default_colors.sql  20230902122106_parameterize_edit_log.sql  20230905095421_set_null_on_delete_primary_image.sql  20260605124118_stats_indexes.sql  20260606081046_editor_data_views.sql  20260609132733_top_ranked_stints_cache.sql  20260609134629_occurrence_invalidation_triggers.sql  20260702143709_add_comic_hidden_and_advance_permission.sql  20260703132813_add_storyline_lifecycle_to_item.sql  20260703150626_exclude_hidden_comics_from_missing_views.sql
database/src/: lib.rs  models.rs
database/src/models/: comic.rs  item.rs  item_type.rs  log_entry.rs  news.rs  occurrence.rs  stats.rs  token.rs
migrations/: 20210704052532_initial.sql  20210927103621_remove_old_stuff.sql
public/: index.html
public/scripts/: angular.custom.js
public/style/: screen.css
services/: callEndpoint.ts
shared/: Cargo.toml
shared/src/: lib.rs
src/: api.rs  controllers.rs  database.rs  index.js  index.jsx  index.tsx  main.rs  models.rs  util.rs
src/QCExtensions.Application/: QCExtensions.Application.csproj  RequestWithToken.cs
src/QCExtensions.Application/Exceptions/: InvalidTokenException.cs  (+4 more)
src/QCExtensions.Domain.Tests/: QCExtensions.Domain.Tests.csproj
src/QCExtensions.Persistence/: QCExtensions.Persistence.csproj  QCExtensionsDbContext.cs
src/QCExtensions.Server/: Program.cs  QCExtensions.Server.csproj  Startup.cs
src/api/: v1.rs  v2.rs  v3.rs
src/client/: ExternalLinkIcon.tsx  Navbar.tsx  app.jsx  app.tsx  style.css
src/controllers/: api.rs  releases.rs
src/database/: models.rs
src/models/: comic_id.rs  image_id.rs  image_type.rs  item_id.rs  item_type.rs  set_boolean.rs  token.rs  v1.rs  v2.rs
src/test/: setup.ts
src/util/: comic_updater.rs  comic_updater_trigger.rs  news_updater.rs  token_cache.rs
test/QCExtensions.Application.Tests/: QCExtensions.Application.Tests.csproj
test/QCExtensions.Domain.Tests/: QCExtensions.Domain.Tests.csproj
test/QCExtensions.Server.Test/: QCExtensions.Server.Test.csproj  ValidatorBaseTests.cs
(+391 files in other folders)
