[package]
name = "qcext-server"
version = "0.1.0"
authors = ["Alexander Krivács Schrøder <alexschrod@gmail.com>"]
edition = "2021"
default-run = "qcext-server"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
database = { path = "./database" }
shared = { path = "./shared" }

chrono = { workspace = true }
futures = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }

actix-files = "0.6.0-beta.7"
actix-http = "3.2"
actix-multipart = "0.6"
actix-web = "4.1"
actix-web-grants = "3.0.0-beta.3"
actix-web-lab = "0.19"
anyhow = "1.0"
arc-swap = "1.5"
bitflags = "2.4"
chrono-tz = "0.8"
const_format = "0.2"
crc32c = "0.6"
ego-tree = "0.6"
ilyvion-util = { version = "0.10", features = ["chrono", "environment"] }
once_cell = "1.8"
opentelemetry = { version = "0.17.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.10", features = [
    "http-proto",
    "reqwest-client",
] }
parse-display = "0.8"
rand = "0.8"
regex = "1.5"
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.17"
semval = "0.5"
serde = "1.0, >= 1.0.184"
serde_json = "1.0"
tokio = "1.12"
tracing-actix-web = { version = "0.7", features = ["opentelemetry_0_17"] }
tracing-opentelemetry = "0.17.0"
tracing-subscriber = { version = "0.3.16", features = ["std"] }
ts-rs = { version = "7.0", git = "https://github.com/alexschrod/ts-rs", branch = "flatten-untagged-hack" }
uuid = { version = "1.1", features = ["serde"] }

[workspace]
members = ["database", "shared"]

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
sqlx = { version = "0.7.1", features = [
    "runtime-tokio-native-tls",
    "mysql",
    "macros",
    "migrate",
    "uuid",
    "chrono",
] }
tracing = "0.1.37"

[profile.release]
strip = true
