[package]
name = "qcext-server"
version = "0.1.0"
authors = ["Alexander Krivács Schrøder <alexschrod@gmail.com>"]
edition = "2021"
default-run = "qcext-server"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
database = { path = "./database" }
shared = { path = "./shared" }

chrono = { workspace = true }
futures = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }

actix-files = "0.6"
actix-http = "3"
actix-multipart = "0.7"
actix-web = "4"
actix-web-grants = "4.1"
actix-web-lab = "0.26"
anyhow = "1.0"
arc-swap = "1"
bitflags = "2"
chrono-tz = "0.10"
const_format = "0.2"
crc32c = "0.6"
ego-tree = "0.11"
ilyvion-util = { version = "0.10", features = ["chrono", "environment"] }
once_cell = "1"
opentelemetry = { version = "0.17.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.10", features = [
    "http-proto",
    "reqwest-client",
] }
parse-display = "0.11"
rand = "0.10"
regex = "1"
reqwest = { version = "0.13", features = ["json"] }
reqwest-011 = { package = "reqwest", version = "0.11" }
scraper = "0.27"
semval = "0.5"
serde = "1.0.184"
serde_json = "1.0"
tokio = "1"
tracing-actix-web = { version = "0.7", features = ["opentelemetry_0_17"] }
tracing-opentelemetry = "0.17.0"
tracing-subscriber = { version = "0.3", features = ["std"] }
ts-rs = { version = "7.0", git = "https://github.com/ilyvion-contrib/ts-rs", branch = "flatten-untagged-hack" }
uuid = { version = "1", features = ["serde"] }

[workspace]
members = ["database", "shared"]

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-native-tls",
    "mysql",
    "macros",
    "migrate",
    "uuid",
    "chrono",
] }
tracing = "0.1.37"

[lints]
workspace = true

[profile.release]
strip = true

[workspace.lints.rust]
anonymous_parameters = "deny"
elided_lifetimes_in_paths = "deny"
ellipsis_inclusive_range_patterns = "deny"
nonstandard_style = { level = "deny", priority = -1 }
rust_2018_idioms = { level = "deny", priority = -1 }
trivial_numeric_casts = "deny"
unsafe_code = "deny"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
variant_size_differences = "warn"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"

[workspace.lints.clippy]
cast_lossless = "deny"
default_trait_access = "deny"
empty_enum = "deny"
enum_glob_use = "deny"
expl_impl_clone_on_copy = "deny"
explicit_into_iter_loop = "deny"
explicit_iter_loop = "deny"
manual_filter_map = "deny"
filter_map_next = "deny"
if_not_else = "deny"
invalid_upcast_comparisons = "deny"
items_after_statements = "deny"
large_digit_groups = "deny"
map_flatten = "deny"
match_same_arms = "deny"
mut_mut = "deny"
needless_continue = "deny"
needless_pass_by_value = "deny"
map_unwrap_or = "deny"
redundant_closure_for_method_calls = "deny"
single_match_else = "deny"
string_add_assign = "deny"
type_repetition_in_bounds = "deny"
unseparated_literal_suffix = "deny"
unused_self = "deny"
use_self = "deny"
used_underscore_binding = "deny"
must_use_candidate = "warn"
enum_variant_names = "warn"
similar_names = "warn"
too_many_lines = "warn"
