[package]
name = "qcext-server"
version = "0.1.0"
authors = ["Alexander Krivács Schrøder <alexschrod@gmail.com>"]
edition = "2021"
default-run = "qcext-server"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
database = { path = "./database" }
shared = { path = "./shared" }

chrono = { workspace = true }
futures = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }

actix-files = "0.6"
actix-http = "3"
actix-multipart = "0.7"
actix-web = "4"
actix-web-grants = "4.1"
actix-web-lab = "0.26"
anyhow = "1.0"
arc-swap = "1"
bitflags = "2"
chrono-tz = "0.10"
const_format = "0.2"
crc32c = "0.6"
ego-tree = "0.11"
ilyvion-util = { version = "0.10", features = ["chrono", "environment"] }
once_cell = "1"
opentelemetry = { version = "0.17.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.10", features = [
    "http-proto",
    "reqwest-client",
] }
parse-display = "0.11"
rand = "0.10"
regex = "1"
reqwest = { version = "0.13", features = ["json"] }
reqwest-011 = { package = "reqwest", version = "0.11" }
scraper = "0.27"
semval = "0.5"
serde = "1.0.184"
serde_json = "1.0"
tokio = "1"
tracing-actix-web = { version = "0.7", features = ["opentelemetry_0_17"] }
tracing-opentelemetry = "0.17.0"
tracing-subscriber = { version = "0.3", features = ["std"] }
ts-rs = { version = "7.0", git = "https://github.com/ilyvion-contrib/ts-rs", branch = "flatten-untagged-hack" }
uuid = { version = "1", features = ["serde"] }

[workspace]
members = ["database", "shared"]

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-native-tls",
    "mysql",
    "macros",
    "migrate",
    "uuid",
    "chrono",
] }
tracing = "0.1.37"

[lints]
workspace = true

[profile.release]
strip = true

[workspace.lints.rust]
anonymous_parameters = "deny"
elided_lifetimes_in_paths = "deny"
ellipsis_inclusive_range_patterns = "deny"
nonstandard_style = { level = "deny", priority = -1 }
rust_2018_idioms = { level = "deny", priority = -1 }
trivial_numeric_casts = "deny"
unsafe_code = "deny"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
variant_size_differences = "warn"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"

[workspace.lints.clippy]
allow_attributes = "deny"
# allow_attributes_without_reason = "deny"
cast_lossless = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_precision_loss = "deny"
cast_sign_loss = "deny"
default_trait_access = "deny"
empty_enums = "deny"
enum_glob_use = "deny"
expl_impl_clone_on_copy = "deny"
explicit_into_iter_loop = "deny"
explicit_iter_loop = "deny"
filter_map_next = "deny"
if_not_else = "deny"
ignored_unit_patterns = "deny"
invalid_upcast_comparisons = "deny"
items_after_statements = "deny"
large_digit_groups = "deny"
manual_filter_map = "deny"
map_flatten = "deny"
map_unwrap_or = "deny"
match_same_arms = "deny"
missing_const_for_fn = "deny"
mut_mut = "deny"
needless_continue = "deny"
needless_pass_by_value = "deny"
option_if_let_else = "deny"
or_fun_call = "deny"
redundant_closure_for_method_calls = "deny"
semicolon_if_nothing_returned = "deny"
single_match_else = "deny"
string_add_assign = "deny"
type_repetition_in_bounds = "deny"
uninlined_format_args = "deny"
unreadable_literal = "deny"
unseparated_literal_suffix = "deny"
unused_self = "deny"
# Sometimes gives false positives; feel free to disable per-crate.
use_self = "deny"
used_underscore_binding = "deny"
wildcard_imports = "deny"

enum_variant_names = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
must_use_candidate = "warn"
struct_field_names = "warn"
suboptimal_flops = "warn"

future_not_send = "allow"
redundant_pub_crate = "allow"

pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
