[package]
name = "database"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }

chrono = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }
